Fix long teacher title overflowing its parent on mobile

--- a/wp-content/themes/salsa-siempre/scss/_teachers.scss
+++ b/wp-content/themes/salsa-siempre/scss/_teachers.scss
@@ -1,13 +1,10 @@
 /* listing */
-.teachers-item-caption {
-	height: 4em;
-	background-color: $yellow;
-	text-align: center;
-}
-
 .teachers-item-title {
 	font-size: 1.6em;
-	line-height: 2.5em;
+	line-height: 1.5em;
+	text-align: center;
+	background-color: $yellow;
+	padding: 0.5em 0;
 	margin: 0;
 }
 
